🚸 feat(hem): prevent layout shift in hero image using aspect-ratio

--- a/src/app/pages/hem/hem.component.scss
+++ b/src/app/pages/hem/hem.component.scss
@@ -69,6 +69,7 @@
     }
   }
   .img-wrapper {
+    aspect-ratio: 191 / 100;
     width: 100%;
     img {
       display: block;
